--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,4 @@
-@font-face {
-	font-family: 'Conv_ofont.ru_Calibri';
-	src: url('fonts/ofont.ru_Calibri.eot');
-	src: local('☺'), url('fonts/ofont.ru_Calibri.woff') format('woff'), url('fonts/ofont.ru_Calibri.ttf') format('truetype'), url('fonts/ofont.ru_Calibri.svg') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'Conv_calibri-bold';
-	src: url('fonts/calibri-bold.eot');
-	src: local('☺'), url('fonts/calibri-bold.woff') format('woff'), url('fonts/calibri-bold.ttf') format('truetype'), url('fonts/calibri-bold.svg') format('svg');
-	font-weight: normal;
-	font-style: normal;
+.header_{
+    font-family: 'Calibri';
+    font-weight: Regular;
 }
