--- a/css/main.css
+++ b/css/main.css
@@ -4,4 +4,17 @@
 .logo{
     margin-left: 43px;
     margin-top: 58px;
+    display: inline-block;
+}
+.logo_descript{
+    display: inline-block;
+}
+.logo_descript h1{
+    font-family: 'Calibri';
+    font-weight: bold;
+    text-decoration-color: 68a707;
+    font-size: 58px;
+}
+.logo_descript_number{
+    display: inline-block;
 }
