--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
 .wrapper{
     max-width: 1952px;
+    background-image: url(../img/background_img.png);
+    background-repeat: no-repeat;
 }
 .header{
     position: relative;
@@ -30,4 +32,6 @@
     position: absolute;
     top: 42px;
     left: 917px;
+    display: inline-block;
+    box-sizing: border-box;
 }
