--- a/css/main.css
+++ b/css/main.css
@@ -46,13 +46,21 @@
 .name_ademet{
     position: relative;
     display: inline-block;
-    left: 587px;
+    left: 495px;
     top: -15px;
+}
+.name_ademet::before{
+    content: "";
+    border: 2px solid black;
+    height: 73px;
+    display: inline-block;
+    position: relative;
+    top: 156px;
+    left: -41px;
 }
 .name_ademet_{
     font-family: 'Calibri';
     font-weight: bold;
     color: #076a07;
     font-size: 60px;
-    
 }
