--- a/css/main.css
+++ b/css/main.css
@@ -51,12 +51,13 @@
 }
 .name_ademet::before{
     content: "";
-    border: 2px solid black;
+    border: 2px solid #333333;
     height: 73px;
     display: inline-block;
     position: relative;
     top: 156px;
     left: -41px;
+    border-radius: 10px;
 }
 .name_ademet_{
     font-family: 'Calibri';
