--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,7 @@
     border-radius: 50%;
     width: 425px;
     height: 425px;
-    position: relative;
+    position: absolute;
     display: inline-block;
     left: 0;
     
