--- a/css/main.css
+++ b/css/main.css
@@ -88,9 +88,12 @@
     display: inline-block;
 }
 .back_line{
-    border-bottom: 2px solid red;
-    border-radius: 0 0 10px 3px;
-    width: 425px;
+    width: 100px;
+    height: 50px;
+    border-radius: 100px 100px 0 0;
+    border-top: 5px solid red;
+    border-left: 5px solid red;
+    border-right: 5px solid red;
     position: relative;
     display: inline-block;
     left: 0;
