--- a/css/main.css
+++ b/css/main.css
@@ -88,14 +88,14 @@
     display: inline-block;
 }
 .back_line{
-    width: 100px;
+    width: 350px;
     height: 50px;
     border-radius: 100px 100px 0 0;
-    border-top: 5px solid red;
-    border-left: 5px solid red;
-    border-right: 5px solid red;
+    border-top: 5px solid #68a707;
+    border-left: 5px solid #68a707;
+    border-right: 5px solid #68a707;
     position: relative;
     display: inline-block;
-    left: 0;
-    
+    left: 277px;
+    top: -900px;
 }
