--- a/css/main.css
+++ b/css/main.css
@@ -82,10 +82,11 @@
 .back_shadow{
     border: 2px solid green;
     border-radius: 50%;
-    width: 425px;
-    height: 425px;
+    width: 386px;
+    height: 383px;
     position: relative;
     display: inline-block;
+    top: -393px;
 }
 .back_line{
     width: 350px;
