--- a/css/main.css
+++ b/css/main.css
@@ -80,13 +80,24 @@
     display: inline-block;
 }
 .back_shadow{
-    border: 2px solid green;
+    border: 0 solid green;
     border-radius: 50%;
+    box-shadow: 0 0 0px 13px #dcebc6;
     width: 386px;
     height: 383px;
     position: relative;
     display: inline-block;
     top: -393px;
+}
+.back_shadow::before{
+    content: "";
+    border: 0 solid green;
+    border-radius: 50%;
+    box-shadow: inset 0 0 0 8px #dcebc6;
+    width: 386px;
+    height: 383px;
+    position: relative;
+    display: inline-block;
 }
 .back_line{
     width: 350px;
