--- a/css/main.css
+++ b/css/main.css
@@ -100,14 +100,14 @@
     display: inline-block;
 }
 .back_line{
-    width: 350px;
-    height: 50px;
-    border-radius: 100px 100px 0 0;
-    border-top: 5px solid #68a707;
-    border-left: 5px solid #68a707;
-    border-right: 5px solid #68a707;
+    width: 20em;
+    height: 7em;
+    border: 2px solid red;
+    border-radius: 50% 50% 0 0 / 100% 100% 0 0;
+    clip-path: circle(50% at center bottom);
     position: relative;
     display: inline-block;
-    left: 277px;
-    top: -900px;
+    left: 135px;
+    top: -735px;
+    transform: rotate(50deg);
 }
