--- a/css/main.css
+++ b/css/main.css
@@ -100,14 +100,14 @@
     display: inline-block;
 }
 .back_line{
-    width: 20em;
-    height: 7em;
+    width: 25em;
+    height: 13em;
     border: 2px solid red;
     border-radius: 50% 50% 0 0 / 100% 100% 0 0;
-    clip-path: circle(50% at center bottom);
+    border-bottom: 0;
     position: relative;
     display: inline-block;
-    left: 135px;
+    left: 70px;
     top: -735px;
-    transform: rotate(50deg);
+    transform: rotate(62deg);
 }
