--- a/css/main.css
+++ b/css/main.css
@@ -112,3 +112,17 @@
     top: -737px;
     transform: rotate(64deg);
 }
+.back_line::before{
+    content: "";
+    width: 24em;
+    height: 14em;
+    border: 4px solid #68a707;
+    border-top-left-radius: 200px;
+    border-top-right-radius: 200px;
+    border-bottom: 0;
+    position: relative;
+    display: inline-block;
+    transform: rotate(175deg);
+    left: 24px;
+    top: 24px;
+}
