--- a/css/main.css
+++ b/css/main.css
@@ -126,3 +126,9 @@
     left: 24px;
     top: 24px;
 }
+#back_line_canv{
+    width: 400px;
+    height: 400px;
+    border: 1px solid red;
+    background: url(/img/background_img.png);
+}
