--- a/css/main.css
+++ b/css/main.css
@@ -107,24 +107,24 @@
     border-top-right-radius: 200px;
     border-bottom: 0;
     position: relative;
-    display: inline-block;
+    display: block;
     left: 69px;
     top: -737px;
     transform: rotate(64deg);
 }
 .back_line::before{
     content: "";
-    width: 24em;
-    height: 14em;
+    width: 200px;
+    height: 100px;
     border: 4px solid #68a707;
     border-top-left-radius: 200px;
     border-top-right-radius: 200px;
     border-bottom: 0;
     position: relative;
-    display: inline-block;
+    display: block;
     transform: rotate(175deg);
-    left: 24px;
-    top: 24px;
+    left: 3px;
+    top: 222px;
 }
 #canv_line{
     width: 500px;
