--- a/css/main.css
+++ b/css/main.css
@@ -100,36 +100,10 @@
     display: inline-block;
 }
 .back_line{
-    width: 24em;
-    height: 14em;
-    border: 4px solid #68a707;
-    border-top-left-radius: 200px;
-    border-top-right-radius: 200px;
-    border-bottom: 0;
-    position: relative;
     display: block;
-    left: 69px;
-    top: -737px;
-    transform: rotate(64deg);
-}
-.back_line::before{
-    content: "";
-    width: 200px;
-    height: 100px;
-    border: 4px solid #68a707;
-    border-top-left-radius: 200px;
-    border-top-right-radius: 200px;
-    border-bottom: 0;
     position: relative;
-    display: block;
-    transform: rotate(175deg);
-    left: 3px;
-    top: 222px;
 }
-#canv_line{
-    width: 500px;
-    height: 400px;
-    border: 1px solid red;
-    background: transparent;
-    display: inline-block;
+.back_line img{
+    top: 100px;
+    position: relative;
 }
